--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-markdown": "^6.0.1",
+    "react-syntax-highlighter": "^15.4.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
