--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
+    "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "mongodb": "^4.1.3",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.1",
-    "react-syntax-highlighter": "^15.4.4"
+    "react-syntax-highlighter": "^15.4.4",
+    "react-toastify": "^8.0.3",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
