--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
+    "bcryptjs": "^2.4.3",
+    "chalk": "^4.1.2",
+    "each-async": "^2.0.0",
     "formik": "^2.2.9",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "indent-string": "^5.0.0",
     "mongodb": "^4.1.3",
     "next": "latest",
+    "next-auth": "^3.29.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.1",
     "react-syntax-highlighter": "^15.4.4",
     "react-toastify": "^8.0.3",
-    "swr": "^1.0.1"
+    "swr": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
